# Beacon-Library

./: .env.bak  .env.example  .gitignore  AUTHENTICATION.md  BUCKET_FIX_SUMMARY.md  BUG_FIX_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  FIX_SUMMARY.md  MINIO_FIX_SUMMARY.md  Makefile  NAVIGATION_GUIDE.md  QUICK_REFERENCE.md  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  fix-white-screen.sh
admin/: README.md  docker-compose.admin.yml
admin/pgadmin/: servers.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260110_000001_initial_schema.py
backend/app/: __init__.py  main.py  observability.py
backend/app/api/: __init__.py  admin.py  audit.py  browse.py  deps.py  directories.py  files.py  libraries.py  mcp.py  notifications.py  preview.py  realtime.py  search.py  shares.py  trash.py
backend/app/core/: __init__.py  config.py  correlation.py  database.py  security.py  versioning.py
backend/app/mcp/: __init__.py  server.py  tools.py
backend/app/models/: __init__.py  audit.py  base.py  directory.py  file.py  library.py  notification.py  share.py
backend/app/schemas/: __init__.py  admin.py  audit.py  browse.py  directory.py  file.py  library.py  notification.py  share.py  trash.py
backend/app/services/: __init__.py  audit.py  cache.py  chunking.py  content_extraction.py  metadata_extraction.py  notification.py  preview.py  search.py  share.py  storage.py  trash.py
backend/scripts/: create_initial_library.py  reindex_library.py
desktop/: README.md  electron-vite.config.ts  package.json  tsconfig.json
desktop/src/main/: auth-service.ts  file-watcher.ts  main.ts  sync-service.ts
desktop/src/preload/: preload.ts
desktop/src/renderer/: index.html
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  Navbar.tsx  NotificationBell.tsx  StatusWidget.tsx
frontend/src/config/: index.ts
frontend/src/hooks/: useAuth.tsx
frontend/src/i18n/: index.ts
frontend/src/pages/: About.tsx  Catalog.tsx  Explorer.tsx  Home.tsx  Libraries.tsx  Search.tsx  Settings.tsx  (+1 more)
mcp-agent/: Dockerfile  README.md  agent.py  config.py  docker-compose.yml  env.example  mcp_client.py  requirements.txt  server.py  tools.py
mcp-vector/: Dockerfile  README.md  env.example  lmstudio-mcp-config-local.json  lmstudio-mcp-config.json  pyproject.toml
mcp-vector/app/: __init__.py  config.py  main.py  observability.py
mcp-vector/app/mcp/: __init__.py  server.py  tools.py
mcp-vector/app/schemas/: __init__.py  vector.py
mcp-vector/app/services/: __init__.py  access.py  chroma.py  embeddings.py
mcp-vector/tests/: __init__.py  conftest.py  test_api.py  test_schemas.py
nginx/: nginx.conf  nginx.local.conf
observability/: README.md
observability/alloy/: config.alloy
observability/chromadb/: config.yaml
observability/promtail/: promtail-config.yml
scripts/: create_library.sh  setup_and_create_library.sh
(+17 files in other folders)
